--- a/package.json
+++ b/package.json
@@ -3,20 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.17",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "immer": "^9.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "styled-tools": "^1.7.2",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -46,13 +38,7 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.10",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/styled-components": "^5.1.19",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
@@ -64,6 +50,15 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.4.5",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.2"
+    "ts-jest": "^27.1.2",
+    "@types/jest": "^27.0.3",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/enzyme": "^3.10.10",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/styled-components": "^5.1.19",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6"
   }
 }
